# Solstice

./: .gitignore  Cargo.toml  README.md  build.sh  workspace.code-workspace
assets/models/buildings/: test.gltf  well_pump.blend  well_pump.blend1  well_pump.gltf  well_pump.mtl
assets/models/ground1/: ground1.blend  ground1.blend1  ground1.gltf  ground1.mtl  hollow_ground.blend  hollow_ground.gltf  hollow_ground.mtl  spires_full.blend  spires_full.blend1  spires_full.gltf  spires_hollow.blend  spires_hollow.blend1  spires_hollow.gltf  spires_hollow.mtl  well_ground.blend  well_ground.blend1  well_ground.gltf  well_ground.mtl
assets/models/pipes/: pipe_base.blend  pipe_base.blend1  pipe_base.gltf  pipe_base.mtl  pipe_cylinder.blend  pipe_cylinder.blend1  pipe_cylinder.mtl
assets/shaders/: instancing.wgsl
solstice-server/: Cargo.toml
solstice-server/src/: main.rs
src/: algorithms.rs  constants.rs  gui_branch_builder.rs  instancing.rs  main.rs  material_palette.rs  model_loader.rs  player.rs
src/building_system/: blueprint.rs  building.rs  building_components.rs  building_functions.rs  buildings.rs  load_models.rs  mod.rs  placement.rs  raycasting.rs  sfd  snapping.rs  visualizer.rs
src/player_system/: mod.rs  player.rs  player_startup.rs
src/player_system/gui_system/: gui.rs  gui_startup.rs  mod.rs
src/terrain_generation_system/: compound_collider_builder.rs  generator.rs  mod.rs  mutate_mesh.rs  relevant_attributes.rs  terrain_block.rs
