[package]
name = "eclipsis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_obj = "0.6.0"
bevy_mod_picking = "0.5.4"
bevy_mod_raycast = "0.3.9"
rand = "0.8.5"
nalgebra = { version = "0.30.1" }
bevy_rapier3d = { version = "0.12.1", features = [ "simd-stable", "render" ] }