[package]
name = "solstice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=n"]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.7.0"
bevy_obj = "0.7.0"
bevy_mod_picking = "0.6.1"
bevy_mod_raycast = "0.4.0"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", features = [ "simd-stable" ], rev = "50b634c" }

rand = "0.8.5"
nalgebra = { version = "0.31.0" }
noise = "0.7.0"
lazy_static = "1.4.0"
tokio = { version = "1.17.0", features = [ "full" ] }
phf = { version = "0.10.1", features = ["macros"] }