[package]
name = "solstice-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
laminar = "0.5.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }